# prometheus_alertmanager_dingtalk

./: .coveragerc  .gitignore  .gitreview  .stestr.conf  CONTRIBUTING.rst  Dockerfile  HACKING.rst  README.md  README.rst  requirements.txt  setup.cfg  tox.ini
doc/: quick_start.md
doc/source/: conf.py  index.rst
doc/source/admin/: index.rst
doc/source/cli/: index.rst
doc/source/configuration/: index.rst
doc/source/install/: common_configure.rst  common_prerequisites.rst  get_started.rst  index.rst  install-obs.rst  install-rdo.rst  install-ubuntu.rst  install.rst  next-steps.rst  verify.rst
doc/source/reference/: index.rst
doc/source/user/: index.rst
prometheus_alertmanager_dingtalk/: __init__.py  config.py  main.py  opts.py
prometheus_alertmanager_dingtalk/tests/: test_prometheus_alertmanager_dingtalk.py
releasenotes/source/: conf.py  index.rst
