[metadata]
name = prometheus_alertmanager_dingtalk
summary = webhook for dingtalk
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    prometheus_alertmanager_dingtalk

[compile_catalog]
directory = prometheus_alertmanager_dingtalk/locale
domain = prometheus_alertmanager_dingtalk

[update_catalog]
domain = prometheus_alertmanager_dingtalk
output_dir = prometheus_alertmanager_dingtalk/locale
input_file = prometheus_alertmanager_dingtalk/locale/prometheus_alertmanager_dingtalk.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = prometheus_alertmanager_dingtalk/locale/prometheus_alertmanager_dingtalk.pot
